# NASTRAN-95

./: Makefile.in  README.md  clean_comments.py  configure  configure.ac  equivalence_comment.py  hidestars.py  hollerith  hollerith.json  hollerith.py  hollerith_decode.py  hollerith_encode.py  makefile  match_nested.py  process_modules.py  reconstruct_modules.py  remove_equivalence.sh  run_spag  run_spag.py  showstars.py
bd/: CMakeLists.txt  Makefile.am  Makefile.in  README.md  dpdcbd.f90  exiobd.f90  ferfbd.f90  flbbd.f90  gp3bd.f90  gptabd.f90  ifp3bd.f90  ifx1bd.f90  ifx2bd.f90  ifx3bd.f90  ifx4bd.f90  ifx5bd.f90  ifx6bd.f90  ifx7bd.f90  itembd.f90  of1pbd.f90  of2pbd.f90  of3pbd.f90  of3sbd.f90  of4pbd.f90  of5pbd.f90  of6pbd.f90  of7pbd.f90  of7sbd.f90  of8pbd.f90  of9pbd.f90  ofp1bd.f90  ofp5bd.f90  ofsnbd.f90  ofssbd.f90  pla4bd.f90  plotbd.f90  readbd.f90  sdr2bd.f90  semdbd.f90  sma1bd.f90  (+4 more)
bd/src/: c_bitpos.f90  c_exio2f.f90  c_exio2p.f90  c_ginox.f90  c_gp3com.f90  c_ifp3cm.f90  c_ifpx3.f90  c_ifpx4.f90  c_ifpx5.f90  c_ifpx6.f90  c_invpwx.f90  c_itemdt.f90  c_msgx.f90  c_names.f90  c_ntime.f90  c_ofpb1.f90  c_ofpb3.f90  c_ofpb3s.f90  c_ofpb4.f90  c_ofpb6.f90  c_ofpb7.f90  c_ofpb7s.f90  c_ofpb8.f90  c_ofpb9.f90  c_ofpbd1.f90  c_ofpbd5.f90  c_ofsn1.f90  c_ofss1.f90  c_pla42c.f90  c_pltdat.f90  c_sdr2x2.f90  c_sdr2x4.f90  c_sma1bk.f90  c_sma1cl.f90  c_sma1dp.f90  c_stime.f90  c_symbls.f90  c_xceitb.f90  c_xfiat.f90  c_xfist.f90  (+7 more)
mds/: Makefile.am  Makefile.in  bckrec.f90  bldpk.f90  bldpki.f90  bldpkn.f90  bpack.f90  btstrp.f  btstrp.f90  bunpak.f90  bunpk.f90  close.f90  corwds.f90  cputim.f90  dbmalb.f90  dbmdia.f  dbmdia.f90  dbmdmp.f90  dbmfdp.f90  dbmint.f90  dbmio.f90  dbmlbk.f90  dbmmgr.f90  dbmmov.f90  dbmnam.f90  dbmrel.f90  dbmrlb.f90  dbmstf.f  dbmstf.f90  defcor.f90  dsblpk.f90  dsbpnk.f90  dsbrc1.f90  dsclos.f90  dscpos.f90  dsefwr.f90  dsfwr1.f90  dsgefl.f90  dsgncl.f90  dsgnop.f90  (+85 more)
mis/: Makefile.am  Makefile.in  a42a8.f90  a82int.f90  adr.f90  adri.f90  adrprt.f90  af.f90  ai.f90  ais.f90  akapm.f90  akappa.f90  akp2.f90  alamda.f90  alg.f90  alg01.f90  alg02.f90  alg03.f90  alg04.f90  alg05.f90  alg06.f90  alg07.f90  alg08.f90  alg09.f90  alg1.f90  alg10.f90  alg11.f90  alg12.f90  alg13.f90  alg14.f90  alg15.f90  alg16.f90  alg17.f90  alg18.f90  alg19.f90  alg2.f90  alg25.f90  alg26.f90  alg29.f90  alg3.f90  (+1622 more)
source/bd/: CMakeLists.txt
source/bd/dpdcbd/: c_dpdcom.f90  dpdcbd.f90  dpdcbd.smb
source/bd/exiobd/: c_exio2f.f90  c_exio2p.f90  exiobd.f90  exiobd.smb
source/bd/ferfbd/: ferfbd.f90  ferfbd.smb
source/bd/flbbd/: c_flbfil.f90  flbbd.f90  flbbd.smb
source/bd/gp3bd/: c_gp3com.f90  gp3bd.f90  gp3bd.smb
source/bd/gptabd/: c_clstrs.f90  c_gpta1.f90  gptabd.f90  gptabd.smb
source/bd/ifp3bd/: c_ifp3cm.f90  ifp3bd.f90  ifp3bd.smb
source/bd/ifx1bd/: c_ifpx0.f90  c_ifpx1.f90  ifx1bd.f90  ifx1bd.smb
source/bd/ifx2bd/: c_ifpx2.f90  ifx2bd.f90  ifx2bd.smb
source/bd/ifx3bd/: c_ifpx3.f90  ifx3bd.f90  ifx3bd.smb
source/bd/ifx4bd/: c_ifpx4.f90  ifx4bd.f90  ifx4bd.smb
source/bd/ifx5bd/: c_ifpx5.f90  ifx5bd.f90  ifx5bd.smb
source/bd/ifx6bd/: c_ifpx6.f90  ifx6bd.f90  ifx6bd.smb
source/bd/ifx7bd/: c_ifpx7.f90  ifx7bd.f90  ifx7bd.smb
source/bd/itembd/: c_itemdt.f90  itembd.f90  itembd.smb
source/bd/of1pbd/: c_ofpb1.f90  of1pbd.f90  of1pbd.smb
source/bd/of2pbd/: c_ofpb2.f90  of2pbd.f90  of2pbd.smb
source/bd/of3pbd/: c_ofpb3.f90  of3pbd.f90  of3pbd.smb
source/bd/of3sbd/: c_ofpb3s.f90  of3sbd.f90  of3sbd.smb
source/bd/of4pbd/: c_ofpb4.f90  of4pbd.f90  of4pbd.smb
source/bd/of5pbd/: c_ofpb5.f90  of5pbd.f90  of5pbd.smb
source/bd/of6pbd/: c_ofpb6.f90  of6pbd.f90  of6pbd.smb
source/bd/of7pbd/: c_ofpb7.f90  of7pbd.f90  of7pbd.smb
source/bd/of7sbd/: c_ofpb7s.f90  of7sbd.f90  of7sbd.smb
source/bd/of8pbd/: c_ofpb8.f90  of8pbd.f90  of8pbd.smb
source/bd/of9pbd/: c_ofpb9.f90  of9pbd.f90  of9pbd.smb
source/bd/ofp1bd/: c_ofpbd1.f90  ofp1bd.f90  ofp1bd.smb
source/bd/ofp5bd/: c_ofpbd5.f90  ofp5bd.f90  ofp5bd.smb
source/bd/ofsnbd/: c_ofsn1.f90  ofsnbd.f90  ofsnbd.smb
source/bd/ofssbd/: c_ofss1.f90  ofssbd.f90  ofssbd.smb
source/bd/pla4bd/: c_pla42c.f90  pla4bd.f90  pla4bd.smb
source/bd/plotbd/: c_char94.f90  c_chrdrw.f90  c_drwaxs.f90  c_pltdat.f90  c_pltscr.f90  c_symbls.f90  c_xxparm.f90  plotbd.f90  plotbd.smb
source/bd/readbd/: c_givn.f90  c_regean.f90  readbd.f90  readbd.smb
source/bd/sdr2bd/: c_sdr2x1.f90  c_sdr2x2.f90  c_sdr2x4.f90  sdr2bd.f90  sdr2bd.smb
source/bd/semdbd/: c_bitpos.f90  c_blank.f90  c_ginox.f90  c_lhpwx.f90  c_machin.f90  c_msgx.f90  c_names.f90  c_ntime.f90  c_numtpx.f90  c_oscent.f90  c_output.f90  c_sem.f90  c_sofcom.f90  c_stapid.f90  c_stime.f90  c_system.f90  c_two.f90  c_type.f90  c_xceitb.f90  c_xdpl.f90  c_xechox.f90  c_xfiat.f90  c_xfist.f90  c_xlink.f90  c_xmdmsk.f90  c_xmssg.f90  c_xpfist.f90  c_xreadx.f90  c_xvps.f90  c_xxfiat.f90  c_xxread.f90  semdbd.f90  semdbd.smb
source/bd/sma1bd/: c_sma1cl.f90  c_sma1dp.f90  c_sma1et.f90  c_sma1io.f90  sma1bd.f90  sma1bd.smb
source/bd/sma2bd/: c_sma2cl.f90  c_sma2et.f90  c_sma2io.f90  sma2bd.f90  sma2bd.smb
source/bd/ta1abd/: c_ta1acm.f90  ta1abd.f90  ta1abd.smb
source/bd/tabfbd/: c_tabftx.f90  tabfbd.f90  tabfbd.smb
source/bd/vdrbd/: c_vdrcom.f90  vdrbd.f90  vdrbd.smb
source/mds/: Makefile  Makefile.am  dbmdia.f  dbmstf.f  nastran.f90  tdate.f
source/mds/bckrec/: bckrec.f90  bckrec.smb
source/mds/bldpk/: bldpk.f90  bldpk.smb
source/mds/bldpki/: bldpki.f90  bldpki.smb
source/mds/bldpkn/: bldpkn.f90  bldpkn.smb
source/mds/bpack/: bpack.f90  bpack.smb  c_bandb.f90  c_bands.f90
source/mds/btstrp/: btstrp.f90  btstrp.smb  c_lhpwx.f90  c_machin.f90  c_sem.f90  c_system.f90  c_xxread.f90
source/mds/bunpak/: bunpak.f90  bunpak.smb  c_bandb.f90  c_bands.f90
source/mds/bunpk/: bunpk.f90  bunpk.smb  c_bandb.f90  c_bands.f90
source/mds/close/: c_dsunit.f90  c_system.f90  close.f90  close.smb
source/mds/corwds/: corwds.f90  corwds.smb
source/mds/cputim/: cputim.f90  cputim.smb
source/mds/dbmalb/: dbmalb.f90  dbmalb.smb
(+7476 files in other folders)
